--- a/templates/contactpage.html
+++ b/templates/contactpage.html
@@ -41,7 +41,7 @@
         width: 100px;
         height: 100px;
         border-radius: 50%;
-        background: url('{{card_photo}}') no-repeat center center/cover;
+        background: url('{{card_photo_path}}') no-repeat center center/cover;
         transform: translateY(150%);
     }
 
