--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -202,7 +202,7 @@
             </ul>
         </section>
         <div class="ut">
-            <iframe class="spotify" src="https://embed.spotify.com/?uri=spotify:user:intonarumori:playlist:2cM9FHtLZznQVtxTiOYcVW" frameborder="0" allowtransparency="true"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4SFlRodzuAiLUwa0otEuUP?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <h2>Other</h2>
         <section>
