added music and updated book info

--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -111,7 +111,7 @@
             margin-left: 1em;
         }
         .booktitle {
-            font-size: 1.5em;
+            font-size: 1.4em;
             margin-bottom: .5em;
         }
         .bookinfo {
@@ -131,7 +131,7 @@
                 <div id="itdependscover"></div>
                 <div class="bookdetails">
                     <div class="booktitle">It Depends: Writing on Technology Leadership 2012-2022</div>
-                    <div class="bookinfo">Available March, 2024</div>
+                    <div class="bookinfo">Published by Unit Circle Press, 2024</div>
                     <div class="booklink"><a href="https://itdependsbook.net">more info</a></div>
                 </div>
             </div>
