--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -175,7 +175,7 @@
 			</ul>
 		</nav>
 		<div id="links">
-			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://mastodon.social/@kmg"><img class="genericon" src="img/mastodon.svg"></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.threads.net/@kevingoldsmith"><img class="genericon" src="img/threads.svg"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
