fixed whitespace around h2

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -34,10 +34,11 @@
     <style type="text/css">
         section {
             clear: both;
+            overflow: auto;
         }
         h2 {
             clear: both;
-            margin-top: 2em;
+            margin-top: 1.5em;
         }
         h3 {
             clear: both;
