update bluesky link

--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -175,7 +175,7 @@
 			</ul>
 		</nav>
 		<div id="links">
-			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://bsky.app/profile/kmg.bsky.social"><img class="genericon" src="img/bsky.svg" alt="Bluesky"></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://bsky.app/profile/kevingoldsmith.bsky.social"><img class="genericon" src="img/bsky.svg" alt="Bluesky"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.threads.net/@kevingoldsmith"><img class="genericon" src="img/threads.svg" alt="threads"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
