--- a/templates/photo-gallery-template.html
+++ b/templates/photo-gallery-template.html
@@ -4,12 +4,10 @@
 	<meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>{{title}}</title>
-    <meta name="description" content="Photogallery {{galleryname}} by {{author}}" />
-    <meta name="author" content="{{author}}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="{{googsiteverification}}" />
-    <link rel="canonical" href="https://kevingoldsmith.com/photos/{{filename}}" />
+
+{% include 'metadata.html' %}
    
 	{% include 'favicon.html' %}
 
