--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -11,14 +11,12 @@
 	gtag('config', 'UA-2753331-2');
 	</script>
 
-	<title>Kevin Goldsmith</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
-    <meta name="description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography.">
-    <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
-    <link rel="canonical" href="https://kevingoldsmith.com" />
+
+{% include 'metadata.html' %}
 
     <!-- this looks like it is making things slower -->
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com">
@@ -175,7 +173,7 @@
 			</ul>
 		</nav>
 		<div id="links">
-			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://bsky.app/profile/kevingoldsmith.bsky.social"><img class="genericon" src="img/bsky.svg" alt="Bluesky"></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://bsky.app/profile/kevingoldsmith.com"><img class="genericon" src="img/bsky.svg" alt="Bluesky"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.threads.net/@kevingoldsmith"><img class="genericon" src="img/threads.svg" alt="threads"></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
