--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -14,12 +14,10 @@
 	<meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Talks: Kevin Goldsmith</title>
-    <meta name="description" content="a list of talks, panels and workshops by Kevin Goldsmith">
-    <meta name="author" content="Kevin Goldsmith">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="{{googsiteverification}}" />
-	<link rel="canonical" href="https://kevingoldsmith.com/talks/" />
+
+{% include 'metadata.html' %}
 
 	{% include 'favicon.html' %}
 
