--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -14,12 +14,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
-	<meta name="description" content="Photography by Kevin Goldsmith">
-    <meta name="author" content="Kevin Goldsmith">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
-	<title>Photography: Kevin Goldsmith</title>
-	<link rel="canonical" href="https://kevingoldsmith.com/photography.html" />
+
+{% include 'metadata.html' %}
 
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
